--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>SNEAKERS SHOP</title>
+    <link rel="icon" type="image/ico" href="C:\Users\wipcamp11\Documents\GitHub\WIPCAMP11-Webtech\Sneakers\sneakers-filled.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
 </head>
 <style>
         table {
@@ -22,11 +26,17 @@
         tr:nth-child(even) {
           background-color:white;
         }
+        h1{
+            font-family: 'Anton', sans-serif;
+          border-collapse: collapse;
+          width: 100%;  
+          
+        }
         </style>
-    <h1 style="background-color:white; color:black;">SNEAKERS</h1>
+    <h1 style="background-color:white; color:black; font-size:50px;">SNEAKERS SHOP <img src="C:\Users\wipcamp11\Documents\GitHub\WIPCAMP11-Webtech\Sneakers\sneakers-filled.png" width="80px"></h1>
     <h1 style="background-color:black; color:black;">sdfd</h1>
     <table> 
-             <tr style="font-size:50px;">
+             <tr style="font-size:25px;">
                 <th>YEEZY 350</th>
                 <th><img src="./Sneakers/yeezy boost 350 infant Pirate Black.jpg" width="300px"></th>
                 <th><img src="./Sneakers/yeezy boost 350 infant Turtle Dove.jpg" width="300px"></th>
@@ -55,7 +65,7 @@
                 <td><button> Add to cart</button></td>
             </tr>
             <tr>
-              <th>YEEZY 350 V.2</th>
+              <th style="font-size:25px;">YEEZY 350 V.2</th>
               <th><img src="./Sneakers/yeezy boost 350 v2 hyperspace.jpg" width="300px"></th>
               <th><img src="./Sneakers/yeezy boost 350 v2 true form.jpg" width="300px"></th>
               <th><img src="./Sneakers/Yeezy Boost 350 V2 GID Glow.jpg" width="300px"></th>
@@ -83,7 +93,7 @@
                     <td><button> Add to cart</button></td>
                 </tr>
             <tr>
-              <th>YEEZY 500</th>
+              <th style="font-size:25px;">YEEZY 500</th>
               <td><img src="./Sneakers/yeezy 500 blush.jpg" width="300px"></td>
               <td><img src="./Sneakers/yeezy 500 salt.jpg" width="300px"></td>
               <td><img src="./Sneakers/yeezy 500 super moon yellow.jpg" width="300px"></td>
@@ -111,7 +121,7 @@
                 <td><button> Add to cart</button></td>
             </tr>
             <tr>
-              <th>YEEZY 700</th>
+              <th style="font-size:25px;">YEEZY 700</th>
               <th><img src="./Sneakers/Yeezy Boost 700 Analog.jpg" width="300px"></th>
               <th><img src="./Sneakers/Yeezy Boost 700 V2 Vanta.jpg" width="300px"></th>
               <th><img src="./Sneakers/yeezy boost 700 inertia.jpg" width="300px"></th>
@@ -141,6 +151,8 @@
           </table>
 
 <body>
-    
+        <h1 style="background-color:black; color:black;">sdfd</h1>
+        <h1><center>Sneakers Shop Store</center></h1>
+        <h1 style="background-color:black; color:black;">sdfd</h1>
 </body>
 </html>
